--- a/styles/temples.css
+++ b/styles/temples.css
@@ -67,7 +67,7 @@ nav {
     font-size: 1.5rem;
     background: none;
     border: none;
-    color: var(--nav-font-color);
+    color: var(--font-color1);
     cursor: pointer;
     padding: 1rem;
     margin-left: auto;
